[package]
name = "miners"
version = "0.1.4"
edition = "2021"
authors = ["0xCuteSocks"]
description = "miners is a fast Rust library for the Maximal Information-based Nonparametric Exploration (MIC and MINE family)"
license = "GPL v3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
pyo3 = { version = "0.20", features = ["extension-module"] }

[dev-dependencies]
rand = "0.8"

[lib]
name = "miners"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1