[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "miners"
version = "0.1.2"
description = "miners is a fast Rust library for the Maximal Information-based Nonparametric Exploration (MIC and MINE family)"
license = "GPL v3.0"
authors = [{ name = "0xCuteSocks"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]